Add color classes to S/R/N-Action TOC items

--- a/encounters/0-template.html
+++ b/encounters/0-template.html
@@ -68,13 +68,16 @@ toc:
         name: Act_name_here
       -
         id: saction
-        name: "S-Action: Act_name_here"
+        class: susie act
+        name: S-Action
       -
         id: raction
-        name: "R-Action: Act_name_here"
+        class: ralsei act
+        name: R-Action
       -
         id: naction
-        name: "N-Action: Act_name_here"
+        class: noelle act
+        name: N-Action
   -
     name: Items
     subheadings:
@@ -180,7 +183,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 <section class="d-section" id="saction">
 	<h2 class="susie act">S-Action: Act_name_here</h2>
 
-	<h3 id="actnamehere-ft">Flavor text</h3>
+	<h3 id="saction-ft">Flavor text</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>TODO</d-text>
 	</d-box>
@@ -188,7 +191,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 
 	<hr>
 
-	<h3 id="actnamehere-dialogue">Dialogue</h3>
+	<h3 id="saction-dialogue">Dialogue</h3>
 	<d-box theme="battletalk">
 		<d-speaker>Name_goes_here</d-speaker>
 		<d-text>TODO</d-text>
@@ -198,7 +201,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 <section class="d-section" id="raction">
 	<h2 class="ralsei act">R-Action: Act_name_here</h2>
 
-	<h3 id="actnamehere-ft">Flavor text</h3>
+	<h3 id="raction-ft">Flavor text</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>TODO</d-text>
 	</d-box>
@@ -206,7 +209,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 
 	<hr>
 
-	<h3 id="actnamehere-dialogue">Dialogue</h3>
+	<h3 id="raction-dialogue">Dialogue</h3>
 	<d-box theme="battletalk">
 		<d-speaker>Name_goes_here</d-speaker>
 		<d-text>TODO</d-text>
@@ -216,7 +219,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 <section class="d-section" id="naction">
 	<h2 class="noelle act">N-Action: Act_name_here</h2>
 
-	<h3 id="actnamehere-ft">Flavor text</h3>
+	<h3 id="naction-ft">Flavor text</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>TODO</d-text>
 	</d-box>
@@ -224,7 +227,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 
 	<hr>
 
-	<h3 id="actnamehere-dialogue">Dialogue</h3>
+	<h3 id="naction-dialogue">Dialogue</h3>
 	<d-box theme="battletalk">
 		<d-speaker>Name_goes_here</d-speaker>
 		<d-text>TODO</d-text>
