--- a/encounters/poppup.html
+++ b/encounters/poppup.html
@@ -92,12 +92,15 @@ toc:
         name: Avoid
       -
         id: saction
+        class: susie act
         name: S-Action
       -
         id: raction
+        class: ralsei act
         name: R-Action
       -
         id: naction
+        class: noelle act
         name: N-Action
 ---
 {% comment %}
