Rename custom ACT icon positioning key
More intuitively-understood name than "replace mode"... replace what queen.

--- a/encounters/badguys.html
+++ b/encounters/badguys.html
@@ -91,7 +91,7 @@ toc:
       -
         id: anything-lancer
         act_icon: [Ralsei]
-        icon_replace_mode: true
+        custom_icon_positions: true
         name: Anything (on Lancer) / ACTICON X-Anything
   -
     id: pacify
