--- a/encounters/kroundcardcastle.html
+++ b/encounters/kroundcardcastle.html
@@ -85,7 +85,7 @@ toc:
       -
         id: throw
         act_icon: [Susie, Ralsei, Susie, Ralsei]
-        icon_replace_mode: true
+        custom_icon_positions: true
         name: ACTICON ACTICON Susie's Idea / ACTICON ACTICON Throw
   -
     id: postfight
