--- a/encounters/index.html
+++ b/encounters/index.html
@@ -97,7 +97,11 @@ items:
       -
         name: Cyber Field
         sublist:
-          # Werewire, Tasque, Virovirokun, Sweet Cap'n Cakes
+          # Werewire
+          -
+            url: tasque
+            name: Tasque
+          # Virovirokun, Sweet Cap'n Cakes
       -
         name: Cyber City
         sublist:
