Document Maus encounter

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -108,7 +108,10 @@ items:
           -
             url: poppup
             name: Poppup
-          # Maus, Spamton
+          -
+            url: maus
+            name: Maus
+          # Spamton
           -
             url: ambyulance
             name: Ambyu-Lance
