Maus/Tasque: Mark "Tired" FT as also "Low HP"

--- a/encounters/tasque.html
+++ b/encounters/tasque.html
@@ -52,7 +52,7 @@ toc:
         name: Standard
       -
         id: ft-tired
-        name: Tired
+        name: Tired / Low HP
       -
         id: ft-spareable
         name: Spareable
@@ -163,7 +163,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 
 	<hr>
 
-	<h3 id="ft-tired">Tired</h3>
+	<h3 id="ft-tired">Tired / Low HP</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Tasque is beeping dangerously.</d-text>
 	</d-box>
