--- a/encounters/maus.html
+++ b/encounters/maus.html
@@ -58,7 +58,7 @@ toc:
         name: Standard
       -
         id: ft-tired
-        name: Tired
+        name: Tired / Low HP
       -
         id: ft-spareable
         name: Spareable
@@ -179,7 +179,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 
 	<hr>
 
-	<h3 id="ft-tired">Tired</h3>
+	<h3 id="ft-tired">Tired / Low HP</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Maus's clicking sounds more like splat noises.</d-text>
 	</d-box>
