Document Virovirokun encounter

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -101,7 +101,10 @@ items:
           -
             url: tasque
             name: Tasque
-          # Virovirokun, Sweet Cap'n Cakes
+          -
+            url: virovirokun
+            name: Virovirokun
+          # Sweet Cap'n Cakes
       -
         name: Cyber City
         sublist:
