Document Spamton (regular) encounter

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -114,7 +114,9 @@ items:
           -
             url: maus
             name: Maus
-          # Spamton
+          -
+            url: spamton
+            name: Spamton
           -
             url: ambyulance
             name: Ambyu-Lance
