Document Spamton meeting and shop scenes
Also specify Spamton's GIF sprites for the d-sprite constructor in the JS

--- a/locations/index.html
+++ b/locations/index.html
@@ -68,6 +68,16 @@ items:
   -
     url: cyberworld
     name: Cyber World
+    sublist:
+      -
+        name: Cyber City
+        sublist:
+          -
+            url: spamtonshop
+            name: Spamton's shop
+          -
+            url: spamtonshopexterior
+            name: Outside Spamton's shop
   -
     url: tvworld
     name: TV World
