LW location index: Add empty list fallback

--- a/locations/lightworld/index.html
+++ b/locations/lightworld/index.html
@@ -88,6 +88,8 @@ items:
 	<ul>
 		{% for item in section.sublist -%}
 		{% include nested_list_item parent=sectionurl this=item %}
+		{% else %}
+		<li class="gray">To be added!</li>
 		{% endfor %}
 	</ul>
 </section>
