Correct URL prefix for Cyber World location index

--- a/locations/cyberworld/index.html
+++ b/locations/cyberworld/index.html
@@ -39,7 +39,7 @@ items:
 {% for section in page.items -%}
 <section class="d-section" id="{{ section.url }}">
 	<h2>{{ section.name }}</h2>
-	{% assign sectionurl = "/locations/lightworld/" | append: section.url -%}
+	{% assign sectionurl = "/locations/cyberworld/" | append: section.url -%}
 
 	<ul>
 		{% for item in section.sublist -%}
