Split equipment page into armor/weapons pages
It was getting absurdly long just at 4 chapters, I worry for the load times at 7chs

--- a/encounters/ambyulance.html
+++ b/encounters/ambyulance.html
@@ -285,7 +285,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 	</d-box>
 
 	<h4>On Weird Route</h4>
-	<p>After getting the <a href="{{ '/misc/equipment#freezering' | relative_url }}">Freeze Ring</a> and passing the forcefield. Overrides the above two sections' flavor text.</p>
+	<p>After getting the <a href="{{ '/misc/weapons#freezering' | relative_url }}">Freeze Ring</a> and passing the forcefield. Overrides the above two sections' flavor text.</p>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Noelle mutters to herself about saws and needles.</d-text>
 	</d-box>
