--- a/locations/cardkingdom/seap.html
+++ b/locations/cardkingdom/seap.html
@@ -314,7 +314,7 @@ toc:
 
 	<hr>
 
-	<h3 id="sellfail">Empty slot, or trying to sell the <a href="{{ '/misc/equipment#devilsknife' | relative_url }}">Devilsknife</a>/<a href="{{ '/misc/equipment#jevilstail' | relative_url }}">Jevilstail</a></h3>
+	<h3 id="sellfail">Empty slot, or trying to sell the <a href="{{ '/misc/weapons#devilsknife' | relative_url }}">Devilsknife</a>/<a href="{{ '/misc/armor#jevilstail' | relative_url }}">Jevilstail</a></h3>
 	<d-sprite speaker="Seam" emotion="0" format="shop"></d-sprite>
 	<d-box theme="shopright">
 		<d-speaker>Seam</d-speaker>
