--- a/locations/cyberworld/cybercity/spamtonshop.html
+++ b/locations/cyberworld/cybercity/spamtonshop.html
@@ -191,14 +191,14 @@ toc:
 		<d-text>THE SMOOTH<span class="break"></span> TASTE OF</d-text>
 	</d-box>
 	<h4>''THE BIG ONE''</h4>
-	<p>Actually the <a href="{{ '/misc/equipment#brokensword' | relative_url }}">Broken Sword</a>.</p>
+	<p>Actually the <a href="{{ '/misc/weapons#brokensword' | relative_url }}">Broken Sword</a>.</p>
 	<d-box theme="shopdesc">
 		<d-text>CUT ANYTHING</d-text>
 		<d-text>2 PIECES!</d-text>
 		<d-text>CRIMINAL!</d-text>
 	</d-box>
 	<h4>BSHOT BOWTIE</h4>
-	<p>Actually the <a href="{{ '/misc/equipment#frayedbowtie' | relative_url }}">Frayed Bowtie</a>.</p>
+	<p>Actually the <a href="{{ '/misc/armor#frayedbowtie' | relative_url }}">Frayed Bowtie</a>.</p>
 	<d-box theme="shopdesc">
 		<d-text>EXCLUSIVE<span class="break"></span> OFFICIAL<span class="break"></span> SPAMTON</d-text>
 	</d-box>
