--- a/misc/darkitems.html
+++ b/misc/darkitems.html
@@ -1227,7 +1227,7 @@ toc:
 
 <section class="d-section" id="mannequin"> <!-- id 17 -->
 	<h2>Mannequin</h2>
-	<p>Unused. An item version of the <a href="{{ '/misc/equipment#mannequin' | relative_url }}">Mannequin (armor)</a>.</p>
+	<p>Unused. An item version of the <a href="{{ '/misc/armor#mannequin' | relative_url }}">Mannequin (armor)</a>.</p>
 
 	<h3>Description</h3>
 	<h4>Overworld</h4>
@@ -2599,7 +2599,7 @@ toc:
 	<d-box theme="battlemenu">
 		<d-text asterisk>[Character] used the SCARLIXIR!</d-text>
 	</d-box>
-	<p class="note">Heals the same amount as in the overworld. Notably, heal-buffing items like the <a href="{{ '/misc/equipment#blueribbon' | relative_url }}">Blue Ribbon</a> don't buff Kris's 5 HP gain when the Scarlixir is used on Noelle.</p>
+	<p class="note">Heals the same amount as in the overworld. Notably, heal-buffing items like the <a href="{{ '/misc/armor#blueribbon' | relative_url }}">Blue Ribbon</a> don't buff Kris's 5 HP gain when the Scarlixir is used on Noelle.</p>
 </section>
 
 
