--- a/misc/index.html
+++ b/misc/index.html
@@ -20,7 +20,8 @@ toc:
 	<h2>Possessions</h2>
 
 	<ul>
-		<li><a href="{{ '/misc/equipment' | relative_url }}">Equipment</a> - Armor and weapons for the party</li>
+		<li><a href="{{ '/misc/weapons' | relative_url }}">Weapons</a> - Offensive equipment for the party</li>
+		<li><a href="{{ '/misc/armor' | relative_url }}">Armor</a> - Defensive equipment for the party</li>
 		<li><a href="{{ '/misc/darkitems' | relative_url }}">Dark World items</a>, including key items</li>
 		<li><a href="{{ '/misc/lightitems' | relative_url }}">Light World items</a></li>
 		<!-- <li><a href="{{ '/misc/phone' | relative_url }}">Phone</a> - Dialogue for making calls</li> -->
