--- a/misc/lightitems.html
+++ b/misc/lightitems.html
@@ -176,7 +176,7 @@ toc:
 
 <section class="d-section" id="pencil"> <!-- id 2 -->
 	<h2>Pencil</h2>
-	<p>Light World equivalent of the <a href="{{ '/misc/equipment#woodblade' | relative_url }}">Wood Blade</a>.</p>
+	<p>Light World equivalent of the <a href="{{ '/misc/weapons#woodblade' | relative_url }}">Wood Blade</a>.</p>
 
 	<h3>Info</h3>
 	<d-box theme="light">
@@ -318,7 +318,7 @@ toc:
 
 <section class="d-section" id="halloweenpencil"> <!-- id 6 -->
 	<h2>Halloween Pencil</h2>
-	<p>Light World equivalent of the <a href="{{ '/misc/equipment#spookysword' | relative_url }}">Spookysword</a>.</p>
+	<p>Light World equivalent of the <a href="{{ '/misc/weapons#spookysword' | relative_url }}">Spookysword</a>.</p>
 
 	<h3>Info</h3>
 	<d-box theme="light">
@@ -338,7 +338,7 @@ toc:
 
 <section class="d-section" id="luckypencil"> <!-- id 7 -->
 	<h2>Lucky Pencil</h2>
-	<p>Unused item that's not available in the playable game, but included for completion. Light World equivalent of the <a href="{{ '/misc/equipment#trefoil' | relative_url }}">Trefoil</a>.</p>
+	<p>Unused item that's not available in the playable game, but included for completion. Light World equivalent of the <a href="{{ '/misc/weapons#trefoil' | relative_url }}">Trefoil</a>.</p>
 
 	<h3>Info</h3>
 	<d-box theme="light">
@@ -684,7 +684,7 @@ toc:
 
 <section class="d-section" id="eraser"> <!-- id 12 -->
 	<h2>Eraser</h2>
-	<p>Light World equivalent of the <a href="{{ '/misc/equipment#bounceblade' | relative_url }}">Bounce Blade</a>.</p>
+	<p>Light World equivalent of the <a href="{{ '/misc/weapons#bounceblade' | relative_url }}">Bounce Blade</a>.</p>
 
 	<h3>Info</h3>
 	<d-box theme="light">
@@ -704,7 +704,7 @@ toc:
 
 <section class="d-section" id="mechanicalpencil"> <!-- id 13 -->
 	<h2>Mechanical Pencil</h2>
-	<p>Light World equivalent of the <a href="{{ '/misc/equipment#mechasaber' | relative_url }}">Mecha Saber</a>.</p>
+	<p>Light World equivalent of the <a href="{{ '/misc/weapons#mechasaber' | relative_url }}">Mecha Saber</a>.</p>
 
 	<h3>Info</h3>
 	<d-box theme="light">
@@ -724,7 +724,7 @@ toc:
 
 <section class="d-section" id="wristwatch"> <!-- id 14 -->
 	<h2>Wristwatch</h2>
-	<p>Light World equivalent of the <a href="{{ '/misc/equipment#silverwatch' | relative_url }}">Silver Watch</a>.</p>
+	<p>Light World equivalent of the <a href="{{ '/misc/armor#silverwatch' | relative_url }}">Silver Watch</a>.</p>
 
 	<h3>Info</h3>
 	<d-box theme="light">
@@ -742,7 +742,7 @@ toc:
 
 <section class="d-section" id="holidaypencil"> <!-- id 15 -->
 	<h2>Holiday Pencil</h2>
-	<p>Light World equivalent of the <a href="{{ '/misc/equipment#jingleblade' | relative_url }}">Jingle Blade</a>.</p>
+	<p>Light World equivalent of the <a href="{{ '/misc/weapons#jingleblade' | relative_url }}">Jingle Blade</a>.</p>
 
 	<h3>Info</h3>
 	<d-box theme="light">
@@ -763,7 +763,7 @@ toc:
 
 <section class="d-section" id="cactusneedle"> <!-- id 16 -->
 	<h2>Cactus Needle</h2>
-	<p>Light World equivalent of the <a href="{{ '/misc/equipment#saber10' | relative_url }}">Saber 10</a>.</p>
+	<p>Light World equivalent of the <a href="{{ '/misc/weapons#saber10' | relative_url }}">Saber 10</a>.</p>
 
 	<h3>Info</h3>
 	<d-box theme="light">
@@ -783,7 +783,7 @@ toc:
 
 <section class="d-section" id="blackshard"> <!-- id 17 -->
 	<h2>Black Shard</h2>
-	<p>Light World equivalent of the <a href="{{ '/misc/equipment#blackshard' | relative_url }}">Black Shard (Dark World)</a>.</p>
+	<p>Light World equivalent of the <a href="{{ '/misc/weapons#blackshard' | relative_url }}">Black Shard (Dark World)</a>.</p>
 
 	<h3>Info</h3>
 	<d-box theme="light">
@@ -803,7 +803,7 @@ toc:
 
 <section class="d-section" id="quillpen"> <!-- id 18 -->
 	<h2>Quill Pen</h2>
-	<p>Light World equivalent of the <a href="{{ '/misc/equipment#winglade' | relative_url }}">Winglade</a>.</p>
+	<p>Light World equivalent of the <a href="{{ '/misc/weapons#winglade' | relative_url }}">Winglade</a>.</p>
 
 	<h3>Info</h3>
 	<d-box theme="light">
