--- a/locations/cardkingdom/rouxlsshop.html
+++ b/locations/cardkingdom/rouxlsshop.html
@@ -292,7 +292,7 @@ toc:
 
 	<hr>
 
-	<h3 id="sellfail">Backing out of a sale, empty slot, or trying to sell the <a href="{{ '/misc/equipment#devilsknife' | relative_url }}">Devilsknife</a>/<a href="{{ '/misc/equipment#jevilstail' | relative_url }}">Jevilstail</a></h3>
+	<h3 id="sellfail">Backing out of a sale, empty slot, or trying to sell the <a href="{{ '/misc/weapons#devilsknife' | relative_url }}">Devilsknife</a>/<a href="{{ '/misc/armor#jevilstail' | relative_url }}">Jevilstail</a></h3>
 	<d-sprite speaker="Rouxls" variant="shop" emotion="6" format="shop"></d-sprite>
 	<d-box theme="shopright">
 		<d-speaker>Rouxls</d-speaker>
