--- a/locations/closetworld/seap.html
+++ b/locations/closetworld/seap.html
@@ -355,11 +355,11 @@ toc:
 	<p>Special items include:</p>
 	<ul>
 		<li><a href="{{ '/misc/darkitems#manual' | relative_url }}">The Manual</a></li>
-		<li><a href="{{ '/misc/equipment#jevilstail' | relative_url }}">Jevilstail</a> & <a href="{{ '/misc/equipment#devilsknife' | relative_url }}">Devilsknife</a></li>
-		<li><a href="{{ '/misc/equipment#dealmaker' | relative_url }}">Dealmaker</a> & <a href="{{ '/misc/equipment#puppetscarf' | relative_url }}">Puppet Scarf</a></li>
-		<li><a href="{{ '/misc/equipment#thornring' | relative_url }}">Thorn Ring</a></li>
-		<li><a href="{{ '/misc/equipment#twistedsword' | relative_url }}">Twisted Sword</a></li>
-		<li><a href="{{ '/misc/equipment#blueribbon' | relative_url }}">Blue Ribbon</a></li>
+		<li><a href="{{ '/misc/armor#jevilstail' | relative_url }}">Jevilstail</a> & <a href="{{ '/misc/weapons#devilsknife' | relative_url }}">Devilsknife</a></li>
+		<li><a href="{{ '/misc/armor#dealmaker' | relative_url }}">Dealmaker</a> & <a href="{{ '/misc/weapons#puppetscarf' | relative_url }}">Puppet Scarf</a></li>
+		<li><a href="{{ '/misc/weapons#thornring' | relative_url }}">Thorn Ring</a></li>
+		<li><a href="{{ '/misc/weapons#twistedsword' | relative_url }}">Twisted Sword</a></li>
+		<li><a href="{{ '/misc/armor#blueribbon' | relative_url }}">Blue Ribbon</a></li>
 	</ul>
 	<d-sprite speaker="Seam" emotion="3" format="shop"></d-sprite>
 	<d-box theme="shopright">
