Weapons: Mark EverybodyWeapon as unused

--- a/misc/weapons.html
+++ b/misc/weapons.html
@@ -1025,7 +1025,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<p>Equippable by multiple or no party members.</p>
 
 	<h3 id="everybodyweapon">Everybody Weapon</h3> <!-- weapon id 4 -->
-	<p>Equippable by Kris, Susie, Ralsei, and Noelle.</p>
+	<p>Unused. Equippable by Kris, Susie, Ralsei, and Noelle.</p>
 
 	<h4 id="everybodyweapon-description">Description</h4>
 	<d-box theme="objmenu">
