--- a/locations/closetworld/castle/ralseiroom.html
+++ b/locations/closetworld/castle/ralseiroom.html
@@ -9,14 +9,6 @@ credits: >
 
 sources:
   -
-    name: gml_Object_obj_ch4_PDC06B_Step_0
-    chapters: [4]
-    note: initial cutscene
-  -
-    name: gml_GlobalScript_scr_text
-    chapters: [4]
-    note: initial cutscene
-  -
     name: gml_Object_obj_readable_room1_Other_10
     chapters: [4]
     note: window
@@ -31,6 +23,9 @@ sources:
 
 see_also:
   -
+    url: /chapters/chapter4/ralseiroom
+    name: Discovery cutscene
+  -
     url: /locations/closetworld/castle/krisroom
     name: Kris's room
   -
@@ -38,9 +33,6 @@ see_also:
     name: Susie's room
 
 toc:
-  -
-    id: cutscene
-    name: Initial cutscene
   -
     id: window
     name: Window
@@ -54,260 +46,11 @@ toc:
     id: plush
     name: Plush
 ---
-<section class="d-section" id="cutscene">
-	<h2>Initial cutscene</h2>
-	<p>Plays upon first entrance into the room.</p>
-	<p></p>
-
-	<p class="note">Susie stands at the entrance, staring at the empty room. Ralsei and Kris walk up behind her.</p>
-	<d-box theme="dark">
-		<d-sprite speaker="Susie" emotion="D"></d-sprite>
-		<d-text asterisk>It's...</d-text>
-	</d-box>
-	<p class="note">Susie walks to the side, looking around.</p>
-	<d-box theme="dark">
-		<d-sprite speaker="Susie" emotion="R"></d-sprite>
-		<d-text asterisk>It's... empty...?</d-text>
-	</d-box>
-	<d-box theme="dark">
-		<d-sprite speaker="Ralsei" emotion="8"></d-sprite>
-		<d-text asterisk>...</d-text>
-	</d-box>
-	<p class="note">Ralsei crosses the room to the window as Kris and Susie watch.</p>
-	<d-box theme="dark">
-		<d-sprite speaker="Ralsei" emotion="Q"></d-sprite>
-		<d-text asterisk>My own room? ... I... I don't need a room!</d-text>
-	</d-box>
-	<d-box theme="dark">
-		<d-sprite speaker="Ralsei" emotion="e"></d-sprite>
-		<d-text asterisk>...</d-text>
-	</d-box>
-	<d-box theme="dark">
-		<d-sprite speaker="Ralsei" emotion="a"></d-sprite>
-		<d-text asterisk>...at least... that's what I thought.</d-text>
-	</d-box>
-	<d-box theme="dark">
-		<d-sprite speaker="Ralsei" emotion="Q"></d-sprite>
-		<d-text asterisk>So... So I never...</d-text>
-	</d-box>
-	<p class="note">Kris and Susie approach Ralsei.</p>
-	<d-box theme="dark">
-		<d-sprite speaker="Susie" emotion="C"></d-sprite>
-		<d-text asterisk>... You... you LIVE here. Why do WE have rooms and not you?</d-text>
-	</d-box>
-	<d-box theme="dark">
-		<d-sprite speaker="Ralsei" emotion="Q"></d-sprite>
-		<d-text asterisk>Making you two happy...</d-text>
-	</d-box>
-	<d-box theme="dark">
-		<d-sprite speaker="Ralsei" emotion="Q"></d-sprite>
-		<d-text asterisk>Is... my purpose.</d-text>
-	</d-box>
-	<d-box theme="dark">
-		<d-sprite speaker="Ralsei" emotion="e"></d-sprite>
-		<d-text asterisk>I...</d-text>
-	</d-box>
-	<d-box theme="dark">
-		<d-sprite speaker="Ralsei" emotion="Q"></d-sprite>
-		<d-text asterisk>If I think about it...</d-text>
-	</d-box>
-	<d-box theme="dark">
-		<d-sprite speaker="Ralsei" emotion="a"></d-sprite>
-		<d-text asterisk>There's no reason...</d-text>
-	</d-box>
-	<d-box theme="dark">
-		<d-sprite speaker="Ralsei" emotion="8"></d-sprite>
-		<d-text asterisk>For me... to have... anything.</d-text>
-	</d-box>
-	<p class="note">Susie steps up beside Ralsei.</p>
-	<d-box theme="dark">
-		<d-sprite speaker="Susie" emotion="H"></d-sprite>
-		<d-text asterisk>That's the stupidest goddamn thing I ever heard!</d-text>
-	</d-box>
-	<d-box theme="dark">
-		<d-sprite speaker="Susie" emotion="5"></d-sprite>
-		<d-text asterisk>You see this stupid excuse for a room?</d-text>
-	</d-box>
-	<d-box theme="dark">
-		<d-sprite speaker="Susie" emotion="V"></d-sprite>
-		<d-text asterisk>I don't care what the reason is.</d-text>
-	</d-box>
-	<d-box theme="dark">
-		<d-sprite speaker="Susie" emotion="2"></d-sprite>
-		<d-text asterisk>Me and Kris are gonna fill it up. Wall to wall.</d-text>
-	</d-box>
-	<d-box theme="dark">
-		<d-sprite speaker="Susie" emotion="Y"></d-sprite>
-		<d-text asterisk>Until you have the most badass room in the castle.</d-text>
-	</d-box>
-	<p class="note">Ralsei turns towards Susie.</p>
-	<d-box theme="dark">
-		<d-sprite speaker="Ralsei" emotion="D"></d-sprite>
-		<d-text asterisk>Susie...</d-text>
-	</d-box>
-	<p class="note">Susie turns away and scratches her head.</p>
-	<d-box theme="dark">
-		<d-sprite speaker="Susie" emotion="D"></d-sprite>
-		<d-text asterisk>Look. You can't be the only one with an empty room.</d-text>
-	</d-box>
-	<d-box theme="dark">
-		<d-sprite speaker="Susie" emotion="R"></d-sprite>
-		<d-text asterisk>It's...</d-text>
-	</d-box>
-	<p class="note">Susie's hand goes still.</p>
-	<d-box theme="dark">
-		<d-sprite speaker="Susie" emotion="T"></d-sprite>
-		<d-text asterisk>It's too sad, y'know?</d-text>
-	</d-box>
-	<p class="note">Susie, Ralsei, and Kris face each other.</p>
-	<d-box theme="dark">
-		<d-sprite speaker="Susie" emotion="2"></d-sprite>
-		<d-text asterisk>Wherever we go, we'll keep an eye out for furniture,</d-text>
-	</d-box>
-	<d-box theme="dark">
-		<d-sprite speaker="Susie" emotion="A"></d-sprite>
-		<d-text asterisk>Right, Kris?</d-text>
-	</d-box>
-	<d-box theme="dark">
-		<d-sprite speaker="Susie" emotion="9"></d-sprite>
-		<d-text asterisk>C'mon.</d-text>
-	</d-box>
-	<p class="note">Susie leaves the room.</p>
-	<d-box theme="dark">
-		<d-sprite speaker="Ralsei" emotion="I"></d-sprite>
-		<d-text asterisk>...</d-text>
-	</d-box>
-	<p class="note">Ralsei walks up to Kris.</p>
-	<d-box theme="dark">
-		<d-sprite speaker="Ralsei" emotion="Q"></d-sprite>
-		<d-text asterisk>Kris, Susie is so nice...</d-text>
-	</d-box>
-	<d-box theme="dark">
-		<d-sprite speaker="Ralsei" emotion="e"></d-sprite>
-		<d-text asterisk>It... makes my heart hurt.</d-text>
-	</d-box>
-	<p class="note">A pause. Ralsei turns away.</p>
-	<d-box theme="dark">
-		<d-sprite speaker="Ralsei" emotion="5"></d-sprite>
-		<d-text asterisk>I don't really have any hobbies, or interests.</d-text>
-	</d-box>
-	<d-box theme="dark">
-		<d-sprite speaker="Ralsei" emotion="B"></d-sprite>
-		<d-text asterisk>Baking, sewing, singing... those are all just...</d-text>
-	</d-box>
-	<d-box theme="dark">
-		<d-sprite speaker="Ralsei" emotion="I"></d-sprite>
-		<d-text asterisk>Things I thought to do... for you two.</d-text>
-	</d-box>
-	<d-box theme="dark">
-		<d-sprite speaker="Ralsei" emotion="8"></d-sprite>
-		<d-text asterisk>...</d-text>
-	</d-box>
-	<d-box theme="dark">
-		<d-sprite speaker="Ralsei" emotion="8"></d-sprite>
-		<d-text asterisk>But recently...</d-text>
-	</d-box>
-	<p class="note">Ralsei slowly turns around, facing away from the player.</p>
-	<d-box theme="dark">
-		<d-sprite speaker="Ralsei" emotion="a"></d-sprite>
-		<d-text asterisk>I'm starting to feel like...</d-text>
-	</d-box>
-	<d-box theme="dark">
-		<d-sprite speaker="Ralsei" emotion="Q"></d-sprite>
-		<d-text asterisk>Like I'm developing my own opinions.</d-text>
-	</d-box>
-	<d-box theme="dark">
-		<d-sprite speaker="Ralsei" emotion="0"></d-sprite>
-		<d-text asterisk>My own likes.</d-text>
-	</d-box>
-	<d-box theme="dark">
-		<d-sprite speaker="Ralsei" emotion="Q"></d-sprite>
-		<d-text asterisk>My own dislikes.</d-text>
-	</d-box>
-	<d-box theme="dark">
-		<d-sprite speaker="Ralsei" emotion="e"></d-sprite>
-		<d-text asterisk>My own desires. My own... fears.</d-text>
-	</d-box>
-	<p class="note">A pause. Ralsei slowly turns to Kris.</p>
-	<d-box theme="dark">
-		<d-sprite speaker="Ralsei" emotion="5"></d-sprite>
-		<d-text asterisk>... please... tell me...</d-text>
-	</d-box>
-	<d-box theme="dark">
-		<d-sprite speaker="Ralsei" emotion="0"></d-sprite>
-		<d-text asterisk>Should I...</d-text>
-	</d-box>
-	<d-box theme="dark">
-		<d-sprite speaker="Ralsei" emotion="4"></d-sprite>
-		<d-text asterisk>Should a... Darkner... be feeling like this?</d-text>
-	</d-box>
-	<d-choices theme="dark">
-		<d-option index="0" text="Please be\syourself"></d-option>
-		<d-option index="1" text="Of course not"></d-option>
-	</d-choices>
-	<d-option-panel index="0" theme="dark">
-		<p class="note">Ralsei turns away, blushing.</p>
-		<d-box theme="dark">
-			<d-sprite speaker="Ralsei" emotion="D"></d-sprite>
-			<d-text asterisk>... I...</d-text>
-		</d-box>
-		<p class="note">He turns back to Kris.</p>
-		<d-box theme="dark">
-			<d-sprite speaker="Ralsei" emotion="O"></d-sprite>
-			<d-text asterisk>I...</d-text>
-		</d-box>
-		<d-box theme="dark">
-			<d-sprite speaker="Ralsei" emotion="1"></d-sprite>
-			<d-text asterisk>K... Kris, hearing that from you, I might just...</d-text>
-		</d-box>
-	</d-option-panel>
-	<d-option-panel index="1" theme="dark">
-		<d-box theme="dark">
-			<d-sprite speaker="Ralsei" emotion="J"></d-sprite>
-			<d-text asterisk>Umm, d-did you say "of course?"</d-text>
-		</d-box>
-		<d-box theme="dark">
-			<d-sprite speaker="Ralsei" emotion="K"></d-sprite>
-			<d-text asterisk>You covered up your mouth yawning, there...</d-text>
-		</d-box>
-		<d-box theme="dark">
-			<d-sprite speaker="Ralsei" emotion="2"></d-sprite>
-			<d-text asterisk>Ah, you're nodding! That means, um, yes, doesn't it?</d-text>
-		</d-box>
-		<d-box theme="dark">
-			<d-sprite speaker="Ralsei" emotion="1"></d-sprite>
-			<d-text asterisk>...</d-text>
-		</d-box>
-		<p class="note">Ralsei turns away from Kris.</p>
-		<d-box theme="dark">
-			<d-sprite speaker="Ralsei" emotion="2"></d-sprite>
-			<d-text asterisk>I'm sorry, Kris, I... I was being...</d-text>
-		</d-box>
-	</d-option-panel>
-	<p class="note">Ralsei looks at the door, startled, as Susie comes in pushing either the <a href="#statue">ICE-E statue</a> or a <a href="#trashcan">trashcan</a> ahead of her.</p>
-	<d-box theme="dark">
-		<d-sprite speaker="Susie" emotion="9"></d-sprite>
-		<d-text asterisk>Alright, furniture piece number one!</d-text>
-	</d-box>
-	<d-box theme="dark">
-		<d-sprite speaker="Ralsei" emotion="K"></d-sprite>
-		<d-text asterisk>Th... thanks, Susie!</d-text>
-	</d-box>
-	<d-box theme="dark">
-		<d-sprite speaker="Susie" emotion="2"></d-sprite>
-		<d-text asterisk>Let's go, Kris.</d-text>
-		<d-box theme="dark">
-			<d-sprite speaker="Ralsei" emotion="M"></d-sprite>
-			<d-text asterisk>(Can... you please take this back?)</d-text>
-		</d-box>
-	</d-box>
-</section>
-
 <section class="d-section" id="window">
 	<h2>Window</h2>
 
 	<h3>First time in room</h3>
-	<p>After the initial cutscene, before you leave the room.</p>
+	<p>After the <a href="{{ '/chapters/chapter4/ralseiroom#cutscene' | relative_url }}">initial cutscene</a>, before you leave the room.</p>
 	<d-box theme="dark">
 		<d-text asterisk>(The curtains are fluttering.)</d-text>
 	</d-box>
