Move shop pages inside location folders
Update links on index and other pages

--- a/locations/closetworld/index.html
+++ b/locations/closetworld/index.html
@@ -6,16 +6,16 @@ description: >
 
 toc:
   -
-    id: townsquare
-    name: Town square
+    id: town
+    name: Town
   -
     id: castle
     name: Ralsei's castle
 
 items:
   -
-    id: townsquare
-    name: Town square
+    url: town
+    name: Town
     sublist:
       -
         url: seap
