Move DW locations off full index into DW indices
If we start adding every location to the main index it's gonna get long as hell. Switching to the same thing I was doing with the Light World locations, which is giving the LW folder a dedicated index page with the full set of links, and on the main index, just linking to that page's sections.

Also:
- made some minor tweaks to IDs ("queensmansion" to "queenmansion", to match things like "krisroom" and "noelleroom")
- changed "first floor" etc. in Ralsei's castle to "1F" etc. to match the in-game wording

--- a/locations/closetworld/index.html
+++ b/locations/closetworld/index.html
@@ -25,7 +25,7 @@ items:
     name: Ralsei's castle
     sublist:
       -
-        name: Second floor
+        name: 2F
         sublist:
           -
             url: krisroom
@@ -37,7 +37,7 @@ items:
             url: krissusieroom
             name: Kris and Susie's combined room (Chapter 4 only)
       -
-        name: Third floor
+        name: 3F
         sublist:
           -
             url: ralseiroom
