--- a/locations/cyberworld/index.html
+++ b/locations/cyberworld/index.html
@@ -33,7 +33,7 @@ items:
             url: spamtonshopexterior
             name: Outside Spamton's shop
   -
-    url: queensmansion
+    url: queenmansion
     name: Queen's Mansion
 ---
 {% for section in page.items -%}
