--- a/locations/index.html
+++ b/locations/index.html
@@ -46,38 +46,45 @@ items:
     name: Closet Dark World
     sublist:
       -
-        url: seap
-        name: Seam's shop
+        url: town
+        name: Town
+        splitter: "#"
+      -
+        url: castle
+        name: Ralsei's castle
+        splitter: "#"
   -
     url: cardkingdom
     name: Card Kingdom
     sublist:
       -
-        url: seap
-        name: Seam's (old) shop
+        url: field
+        name: Field
+        splitter: "#"
       -
-        # url: cardcastle
+        url: forest
+        name: Forest
+        splitter: "#"
+      -
+        url: cardcastle
         name: Card Castle
-        sublist:
-          -
-            name: Floor 5
-            sublist:
-              -
-                url: rouxlsshop
-                name: Rouxls's shop
+        splitter: "#"
   -
     url: cyberworld
     name: Cyber World
     sublist:
       -
+        url: cyberfield
+        name: Cyber Field
+        splitter: "#"
+      -
+        url: cybercity
         name: Cyber City
-        sublist:
-          -
-            url: spamtonshop
-            name: Spamton's shop
-          -
-            url: spamtonshopexterior
-            name: Outside Spamton's shop
+        splitter: "#"
+      -
+        url: queenmansion
+        name: Queen's Mansion
+        splitter: "#"
   -
     url: tvworld
     name: TV World
