--- a/locations/cardkingdom/index.html
+++ b/locations/cardkingdom/index.html
@@ -1,6 +1,9 @@
 ---
 title: Card Kingdom locations
 
+layout: indexpage
+base_url: "/locations/cardkingdom/"
+
 description: >
   <p>Index for locations within Card Kingdom, Chapter 1's Dark World.</p>
 
@@ -37,17 +40,3 @@ items:
             url: rouxlsshop
             name: Rouxls's shop
 ---
-{% for section in page.items -%}
-<section class="d-section" id="{{ section.url | default: section.id }}">
-	<h2>{{ section.name }}</h2>
-	{% assign sectionurl = "/locations/cardkingdom/" | append: section.url -%}
-
-	<ul>
-		{% for item in section.sublist -%}
-		{% include nested_list_item parent=sectionurl this=item %}
-		{% else %}
-		<li class="gray">To be added!</li>
-		{% endfor %}
-	</ul>
-</section>
-{% endfor -%}
