--- a/locations/lightworld/index.html
+++ b/locations/lightworld/index.html
@@ -1,6 +1,9 @@
 ---
 title: Light World locations
 
+layout: indexpage
+base_url: "/locations/lightworld/"
+
 description: >
   <p>Index for locations within the Light World, primarily in Hometown.</p>
 
@@ -80,17 +83,3 @@ items:
         url: hallways
         name: Hallways
 ---
-{% for section in page.items -%}
-<section class="d-section" id="{{ section.url }}">
-	<h2>{{ section.name }}</h2>
-	{% assign sectionurl = "/locations/lightworld/" | append: section.url -%}
-
-	<ul>
-		{% for item in section.sublist -%}
-		{% include nested_list_item parent=sectionurl this=item %}
-		{% else %}
-		<li class="gray">To be added!</li>
-		{% endfor %}
-	</ul>
-</section>
-{% endfor -%}
