Rename ch1 goodbye scene, update links, add to index

--- a/encounters/king.html
+++ b/encounters/king.html
@@ -1147,7 +1147,7 @@ toc:
 		<d-text asterisk>See ya.</d-text>
 	</d-box>
 
-	<p class="note">The screen fades to black as they both <a href="{{ '/chapters/chapter1/farewell#prefinal' | relative_url }}">head off towards the Dark Fountain</a>.</p>
+	<p class="note">The screen fades to black as they both <a href="{{ '/chapters/chapter1/goodbye#prefinal' | relative_url }}">head off towards the Dark Fountain</a>.</p>
 
 	<h3 id="defeat-violent">If any Darkners were lost</h3>
 	<d-box theme="dark">
@@ -1386,5 +1386,5 @@ toc:
 		<d-text asterisk>Later, dude.</d-text>
 	</d-box>
 
-	<p class="note">Lancer heads off to the left, while the party heads to the right, proceeding to <a href="{{ '/chapters/chapter1/farewell#final-violent' | relative_url }}">the final farewell</a>.</p>
+	<p class="note">Lancer heads off to the left, while the party heads to the right, proceeding to <a href="{{ '/chapters/chapter1/goodbye#final-violent' | relative_url }}">the final goodbye</a>.</p>
 </section>
