Document Cell Phone usage
Also add note about call to end of Chapter 1 school scene

--- a/misc/darkitems.html
+++ b/misc/darkitems.html
@@ -43,6 +43,10 @@ sources:
     chapters: [1]
     note: Manual toss text
   -
+    name: gml_Object_obj_darkphone_event_Step_0
+    chapters: [1, 2, 3, 4]
+    note: Cell Phone usage
+  -
     name: gml_GlobalScript_scr_itemdesc_oldtype
     chapters: [1]
     note: fallback text and beta item menu
@@ -2650,7 +2654,37 @@ toc:
 
 <section class="d-section" id="cellphone"> <!-- key item id 1; offset by 300 for regular item ID -->
 	<h2>Cell Phone</h2>
-	<p>Key item. See <a href="{{ '/misc/phone' | relative_url }}">Cell Phone</a>.</p>
+	<p>Key item.</p>
+
+	<h3>Description</h3>
+	<d-box theme="objmenu">
+		<d-text>It can be used to make calls.</d-text>
+	</d-box>
+
+	<hr>
+
+	<h3>Usage</h3>
+	<d-box theme="dark">
+		<d-text asterisk>(You tried to call on the Cell Phone.)</d-text>
+	</d-box>
+
+	<p class="note">Any ongoing music pauses to allow an unskippable <a href="{% include wikilink wiki='undertale' page='mus_smile' %}">grating, distorted noise</a> to play for several seconds.</p>
+
+	<hr class="hr2">
+
+	<h4>Chapter 1</h4>
+	<d-box theme="dark">
+		<d-text asterisk>But it doesn't seem to be working.</d-text>
+	</d-box>
+
+	<hr class="hr3">
+
+	<h4>Chapter 2 onwards</h4>
+	<d-box theme="dark">
+		<d-text asterisk>It's nothing but garbage noise.</d-text>
+	</d-box>
+
+	<hr class="hr2">
 </section>
 
 
