--- a/misc/index.html
+++ b/misc/index.html
@@ -24,7 +24,7 @@ toc:
 		<li><a href="{{ '/misc/armor' | relative_url }}">Armor</a> - Defensive equipment for the party</li>
 		<li><a href="{{ '/misc/darkitems' | relative_url }}">Dark World items</a>, including key items</li>
 		<li><a href="{{ '/misc/lightitems' | relative_url }}">Light World items</a></li>
-		<!-- <li><a href="{{ '/misc/phone' | relative_url }}">Phone</a> - Dialogue for making calls</li> -->
+		<li><a href="{{ '/misc/cellphone' | relative_url }}">Cell Phone</a> - Dialogue for making calls</li>
 	</ul>
 </section>
 
