DW items: Fix typos

--- a/misc/darkitems.html
+++ b/misc/darkitems.html
@@ -24,7 +24,7 @@ sources:
     chapters: [1, 2, 3, 4]
     note: combat descriptions
   -
-    name: gml_GlobalScript_scr_keyitemiteminfo
+    name: gml_GlobalScript_scr_keyiteminfo
     chapters: [1, 2, 3, 4]
   -
     name: gml_GlobalScript_scr_itemuse
@@ -3317,7 +3317,7 @@ toc:
 	<p>These play only under special circumstances.</p>
 
 	<h3 id="hammerofjustice">Using items in the Hammer of Justice encounter (Chapter 4)</h3>
-	<p>Begins with the standard "[character] used [ITEM]" message for each item. For the <a href="#tensionbit">Tension Bit</a> specifically, its usual second line "Tension raised up earlier." gets overriden by the "stolen" line.</p>
+	<p>Begins with the standard "[character] used [ITEM]" message for each item. For the <a href="#tensionbit">Tension Bit</a> specifically, its usual second line "Tension raised up earlier." gets overridden by the "stolen" line.</p>
 
 	<d-box theme="battlemenu">
 		<d-text asterisk>Susie used the [ITEM]!</d-text>
