DTR Patch 1.04: Add TODOs, update SpinCake

--- a/misc/darkitems.html
+++ b/misc/darkitems.html
@@ -720,10 +720,21 @@ toc:
 		<d-text>A pastry in the shape of a top.</d-text>
 		<d-text>Heals 80 HP to the team.</d-text>
 	</d-box>
-	<h5>Chapter 2 onwards</h5>
+	<h5>Chapter 2</h5>
+	<p>Also used in Chapter 3 and 4, prior to v0.0.098.</p>
 	<d-box theme="objmenu">
 		<d-text>A pastry in the shape of a top.</d-text>
 		<d-text>Heals 140 HP to the team.</d-text>
+	</d-box>
+	<h5>Chapter 3</h5>
+	<d-box theme="objmenu">
+		<d-text>A pastry in the shape of a top.</d-text>
+		<d-text>Heals 150 HP to the team.</d-text>
+	</d-box>
+	<h5>Chapter 4 onwards</h5>
+	<d-box theme="objmenu">
+		<d-text>A pastry in the shape of a top.</d-text>
+		<d-text>Heals 160 HP to the team.</d-text>
 	</d-box>
 
 	<h4>In battle</h4>
@@ -731,15 +742,30 @@ toc:
 	<d-box theme="battledesc">
 		<d-text>Heals<span class="break"></span> team<span class="break"></span> 80HP</d-text>
 	</d-box>
-	<h5>Chapter 2 onwards</h5>
+	<h5>Chapter 2</h5>
+	<p>Also used in Chapter 3 and 4, prior to v0.0.098.</p>
 	<d-box theme="battledesc">
 		<d-text>Heals<span class="break"></span> team<span class="break"></span> 140HP</d-text>
+	</d-box>
+	<h5>Chapter 3</h5>
+	<d-box theme="battledesc">
+		<d-text>Heals<span class="break"></span> team<span class="break"></span> 150HP</d-text>
+	</d-box>
+	<h5>Chapter 4 onwards</h5>
+	<d-box theme="battledesc">
+		<d-text>Heals<span class="break"></span> team<span class="break"></span> 160HP</d-text>
 	</d-box>
 
 	<hr>
 
 	<h3>Usage (overworld)</h3>
-	<p class="note">Heals all party members for 80 HP (Chapter 1) / 140 HP (Chapter 2 onwards).</p>
+	<p class="note">Heals all party members for:</p>
+	<ul class="note">
+		<li>80 HP (Chapter 1)</li>
+		<li>140 HP (Chapter 2, and Chapters 3/4 prior to v0.0.098)</li>
+		<li>150 HP (Chapter 3)</li>
+		<li>160 HP (Chapter 4 onwards)</li>
+	</ul>
 
 	<d-box theme="objreact">
 		<d-speaker>Susie</d-speaker>
