Kris' room: Mark bed as Ch1 ender only, not Ch4

--- a/locations/lightworld/dreemurrresidence/krisroom.html
+++ b/locations/lightworld/dreemurrresidence/krisroom.html
@@ -39,7 +39,7 @@ toc:
         name: Start of Chapter 1 & 2
       -
         id: bedend
-        name: End of Chapter 1 & 4
+        name: End of Chapter 1
       -
         id: bedsusie
         name: Chapter 4, when Susie is present
@@ -168,7 +168,7 @@ toc:
 
 	<hr>
 
-	<h3 id="bedend">End of Chapter 1 and 4</h3>
+	<h3 id="bedend">End of Chapter 1</h3>
 	<d-box theme="light">
 		<d-text asterisk>(If you go to bed, this chapter of your adventures will end.)</d-text>
 	</d-box>
@@ -183,7 +183,7 @@ toc:
 		<d-box theme="light">
 			<d-text asterisk>(You decided to go to bed.)</d-text>
 		</d-box>
-		<p class="note">The chapter end cutscene plays.</p>
+		<p class="note">The screen fades to black, after which the <a href="{{ '/chapters/chapter1/night#sleep' | relative_url }}">chapter end cutscene</a> plays.</p>
 	</d-option-panel>
 	<d-option-panel index="1" theme="light">
 		<d-box theme="light">
