Document Pipis encounter

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -116,6 +116,9 @@ items:
         name: Queen's Mansion
         sublist:
           # Swatchling, Tasque Manager, Mauswheel, Werewerewire, Spamton NEO, Queen, GIGA Queen
+          -
+            url: pipis
+            name: Pipis
   -
     id: other
     name: Other
