Document Spamton NEO encounter

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -119,6 +119,12 @@ items:
           -
             url: pipis
             name: Pipis
+          -
+            name: Spamton NEO
+            sublist:
+              -
+                url: spamtonneo
+                name: Normal route
   -
     id: other
     name: Other
