--- a/encounters/index.html
+++ b/encounters/index.html
@@ -125,6 +125,9 @@ items:
               -
                 url: spamtonneo
                 name: Normal route
+              -
+                url: spamtonneoweird
+                name: Weird Route
   -
     id: other
     name: Other
