Fix non-relative URLs

--- a/locations/lightworld/holidayresidence/noelleroom.html
+++ b/locations/lightworld/holidayresidence/noelleroom.html
@@ -161,7 +161,7 @@ toc:
 	<d-box theme="light">
 		<d-text asterisk>(It's Noelle's homework desk. You took a pencil out of habit.)</d-text>
 	</d-box>
-	<p class="note">The <a href="{{ '/misc/lightitems#holidaypencil' }}">Holiday Pencil</a> is added to the inventory.</p>
+	<p class="note">The <a href="{{ '/misc/lightitems#holidaypencil' | relative_url }}">Holiday Pencil</a> is added to the inventory.</p>
 
 	<hr>
 
