--- a/misc/cellphone.html
+++ b/misc/cellphone.html
@@ -630,5 +630,5 @@ toc:
 <section class="d-section" id="darkworld">
 	<h2>In the Dark World</h2>
 
-	<p>See <a href="{{ '/misc/darkitems#cellphone' }}">"Cell Phone" on the Dark World items page</a>.</p>
+	<p>See <a href="{{ '/misc/darkitems#cellphone' | relative_url }}">"Cell Phone" on the Dark World items page</a>.</p>
 </section>
