Document Ch2 Berdly fields encounter

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -97,6 +97,9 @@ items:
             url: virovirokun
             name: Virovirokun
           # Sweet Cap'n Cakes
+          -
+            url: berdlycyberfield
+            name: Berdly (first encounter, on rollercoasters)
       -
         name: Cyber City
         sublist:
