Add 8-Bit d-box theme/d-text font

--- a/contribute/htmlguide.html
+++ b/contribute/htmlguide.html
@@ -69,7 +69,7 @@ credits: >
 						</ul>
 					</li>
 					<li>
-						<code>font = "tiny" | "sans"</code>: Changes the font used to Noelle's shy whispering or Comic Sans, respectively.
+						<code>font = "tiny" | "sans" | "8bit"</code>: Changes the font used to Noelle's shy whispering, Comic Sans, or 8-bit, respectively.
 					</li>
 				</ul></td>
 				<td>Plaintext</td>
@@ -201,11 +201,19 @@ credits: >
 
 	<hr>
 
-	<h3>Other: <code>powertitle</code></h3>
-	<p><code>powertitle</code>: Dark World border. For party members' titles in the POWER menu.</p>
+	<h3>Other</h3>
+	<h4><code>powertitle</code></h4>
+	<p>Dark World border. For party members' titles in the POWER menu.</p>
 	<d-box theme="powertitle">
 		<d-text>LV8 Archivist</d-text>
 		<d-text>Keeps track of the story.</d-text>
+	</d-box>
+
+	<h4><code>8bit</code>/<code>eightbit</code></h4>
+	<p>No border, solid edges. For Legend of Tenna and the original MANTLE game dialogue/narration.</p>
+	<d-box theme="8bit">
+		<d-speaker>Tutorial</d-speaker>
+		<d-text>On days like these, kids like you should be gaming hell yeahhh</d-text>
 	</d-box>
 
 	<hr>
